fix spacing

--- a/client/src/styles/cards.scss
+++ b/client/src/styles/cards.scss
@@ -51,6 +51,11 @@
     margin-left: 2.5rem;
     margin-right: 2.5rem;
   }
+  // Submitted card shrinks away
+  .hand.cardSubmitted > .card.handCard.selected {
+    margin-left: -2.5rem;
+    margin-right: -2.5rem;
+  }
 }
 // On Mobile
 .mobile {
@@ -77,13 +82,12 @@
   transform: scale(0) !important;
   width: 0;
   height: 0;
-  margin-left: -3rem;
-  margin-right: -3rem;
   // instantly hide controls after card is submitted
   .cardControls {
     display: none;
   }
 }
+
 // mobile need slightly different margins for shrinking away
 .mobile .hand.cardSubmitted > .card.handCard.selected {
   margin-right: -2.5rem;
